--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:31.4.0')
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation "com.google.android.gms:play-services-location:21.0.1"
 
     //DI
     implementation 'io.insert-koin:koin-android:3.0.1'
